deployments/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: infra
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: infra
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /auth/metrics
        prometheus.io/port: "9000"
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak@sha256:7523ccfbd950f59783504cdf5a0138dae48746dfe36075bbfccdb5a9ee245ee2
        args: ["start", "--import-realm"]
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        ports:
        - name: http
          containerPort: 8080
        - name: management
          containerPort: 9000
        startupProbe:
          httpGet:
            path: /auth/health/started
            port: management
          periodSeconds: 5
          failureThreshold: 36
        readinessProbe:
          httpGet:
            path: /auth/health/ready
            port: management
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /auth/health/live
            port: management
          periodSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 384Mi
          limits:
            cpu: "1"
            memory: 1Gi
        volumeMounts:
        - name: realm-config
          mountPath: /opt/keycloak/data/import
      volumes:
      - name: realm-config
        secret:
          secretName: keycloak-realm-config
